# RoXX

./: .gitignore  BUILD.md  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  FREERADIUS_INTEGRATION.md  FREERADIUS_WINDOWS.md  LICENSE  MANIFEST.in  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0-beta4.md  RELEASE_NOTES_v1.0.0-beta5.md  RELEASE_NOTES_v1.0.0-beta7.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  ROADMAP.md  SECURITY.md  TESTING.md  TESTING_GUIDE.md  debug_fido.py  docker-compose.yml  docker-entrypoint.sh  install_gh.sh  pyproject.toml  requirements.txt  test_installation.py  test_rate_limit.py  test_redis.py  test_roxx.py
.github/: RELEASE_v1.0.0-beta4.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: README.md  freeradius_eap.conf.template  freeradius_exec.conf.example  freeradius_ldap.conf.template  freeradius_mschap.conf.template  freeradius_sites.conf.template  freeradius_yubikey.conf.template  inwebo.conf.template  radius_clients.conf.template  roxx-production.env.example  totp.conf.template  users.conf  users.conf.template  yubikey_mapping.conf.template
docs/: DEPLOYMENT_GUIDE.md  FREERADIUS_INTEGRATION.md  MFA_VPN_GUIDE.md  OPERATIONS.md  RADIUS_ATTRIBUTES_REFERENCE.md  RADIUS_BACKENDS_README.md  RBAC.md  RELEASE_CHECKLIST.md  VPN_INTEGRATION_FORTIGATE.md  VPN_INTEGRATION_PALOALTO.md  VPN_INTEGRATION_STORMSHIELD.md  saml-setup.md  security-integration.md
freeradius/: roxx-module.conf
packaging/: nfpm.yaml  roxx.service
roxx/: __init__.py  __main__.py
scripts/: build_binaries.py  build_linux_packages.sh  generate_sbom.py  install_windows.ps1  uninstall_windows.ps1  upgrade_linux.sh  upgrade_windows.ps1
tests/: __init__.py  conftest.py  test_api_tokens.py  test_beta8.py  test_gui_api_symmetry.py  test_i18n.py  test_log_buffers.py  test_main_entrypoint.py  test_mfa.py  test_mfa_db.py  test_operational_cli.py  test_package_metadata.py  test_radius_backends.py  test_radius_mfa.py  test_rbac_web.py  test_release_tooling.py  test_server_runtime.py  test_services.py  test_system.py  test_totp.py  verify_web_features.py
(+120 files in other folders)
