[project]
name = "roxx"
version = "1.0.0-beta2"
description = "Linux RADIUS Authentication Proxy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = []

dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "msal>=1.24.0",
    "ldap3>=2.9.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "qrcode>=7.0",
    "pillow>=10.0.0",
    "websockets>=11.0",
    "bcrypt>=4.0.0",


]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
roxx = "roxx.__main__:main"
roxx-console = "roxx.cli.console:main"
roxx-setup = "roxx.cli.setup:main"
roxx-web = "roxx.web.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]

where = ["."]
include = ["roxx*"]
exclude = ["config*", "tests*", "docs*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
